# Pylinal

./: .gitignore  README.md  pyproject.toml  vector.py
Pylinal/: matrix.py  test.py  vector.py
src/Pylinal/: __init__.py  linalg.py  matrix.py  vector.py
tests/: test_matrix.py  test_vector.py
